--- a/CarEx.Web/CarEx.Web.csproj
+++ b/CarEx.Web/CarEx.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,10 @@
     <ProjectReference Include="..\CarEx.Core\CarEx.Core.csproj" />
     <ProjectReference Include="..\CarEx.Data\CarEx.Data.csproj" />
     <ProjectReference Include="..\CarEx.Utility\CarEx.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\" />
   </ItemGroup>
 
 
